2014-12-03  Dana Burkart  <dburkart@apple.com>

        Merge r176689. <rdar://problem/18944696>

    2014-12-02  Beth Dakin  <bdakin@apple.com>

            Speculative build fix.

            * platform/spi/mac/QuickLookMacSPI.h:


2014-12-03  Dana Burkart  <dburkart@apple.com>

        Merge r176688. <rdar://problem/18944696>

    2014-12-02  Beth Dakin  <bdakin@apple.com>

            Speculative build fix.

            * platform/spi/mac/QuickLookMacSPI.h:


2014-12-03  Dana Burkart  <dburkart@apple.com>

        Merge r176684. <rdar://problem/18944696>

    2014-12-02  Beth Dakin  <bdakin@apple.com>

            Should use standardQuickLookMenuItem for apps that don't implement customizations
            https://bugs.webkit.org/show_bug.cgi?id=139193
            -and corresponding-
            rdar://problem/18944696

            Reviewed by Anders Carlsson.

            New SPI headers.
            * WebCore.xcodeproj/project.pbxproj:
            * platform/spi/mac/NSMenuSPI.h: Added.
            * platform/spi/mac/QuickLookMacSPI.h: Added.

2014-12-03  Dana Burkart  <dburkart@apple.com>

        Fix merge-related build failure.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::blockSelectionGaps):

2014-12-03  Dana Burkart  <dburkart@apple.com>

        Merge r176295. <rdar://problem/19122588>

    2014-11-18  David Hyatt  <hyatt@apple.com>

            REGRESSION (r167210): Invalid cast in WebCore::RenderBlock::blockSelectionGaps
            https://bugs.webkit.org/show_bug.cgi?id=137590

            Reviewed by Dean Jackson.

            Added fast/block/selection-block-gaps-crash.html

            * rendering/RenderBlock.cpp:
            (WebCore::RenderBlock::blockSelectionGaps):
            Check that we really are a RenderBlock before recurring.


2014-12-03  Dana Burkart  <dburkart@apple.com>

        Merge r175974. <rdar://problem/19122595>

    2014-11-11  David Kilzer  <ddkilzer@apple.com>
